--- a/indx.html
+++ b/indx.html
@@ -13,7 +13,8 @@
 <body>
     
 
-
+<!--id=unique element(used ones in every page)
+     class=group of multiple elements -->
   <div class="card">
     <div id="header">
       <h1>Chatbot</h1>
@@ -31,6 +32,9 @@
     </div>
   </div>
   <script>
+    // JS
+    //const->constant variable, let->Changable variable
+    // Pre-requisted 2D Array is given
     const userMessage = [
       ["hi", "hey", "hello"],
       ["sure", "yes", "no"],
@@ -108,26 +112,30 @@
     ];
 
     const alternative = ["Same here, dude.", "That's cool! Go on...", "Dude...", "Ask something else...", "Hey, I'm listening..."];
-
+    // System(Bot) side speech
     const synth = window.speechSynthesis;
 
     function voiceControl(string) {
-      let u = new SpeechSynthesisUtterance(string);
+      let u = new SpeechSynthesisUtterance(string); // Convert bot reply into speech
       u.text = string;
       u.lang = "en-aus";
-      u.volume = 1;
-      u.rate = 1;
-      u.pitch = 1;
+      u.volume = 1; // 0->low,1->high volume
+      u.rate = 1;//speed of speech
+      u.pitch = 1;//normal pitch
       synth.speak(u);
     }
 
+     // User side send message
     function sendMessage() {
+      // It will take input from HTML document
       const inputField = document.getElementById("input");
+      //Trim:Remove extra whitespace
       let input = inputField.value.trim();
-      if (input) output(input);
-      inputField.value = "";
+      if (input) output(input); //if(input) check whether it is null,empty (execute false)or not & o/p(i/p) if condition true then only calls function 
+      inputField.value = "";//Clears input box after execution of i/p
     }
 
+    //Handle Enter I/P keyword to click(send button in i/p typed text)
     document.addEventListener("DOMContentLoaded", () => {
       const inputField = document.getElementById("input");
       inputField.addEventListener("keydown", function (e) {
@@ -139,6 +147,7 @@
       });
     });
 
+    //Input provided should automatically take in lowercase and replace special characters 
     function output(input) {
       let text = input.toLowerCase().replace(/[^\w\s\d]/gi, "");
 
@@ -149,7 +158,7 @@
         .replace(/please /g, "")
         .replace(/ please/g, "")
         .trim();
-
+       // After changes it will checkor compare 
       let comparedText = compare(userMessage, botReply, text);
 
       let product = comparedText
@@ -158,7 +167,7 @@
 
       addChat(input, product);
     }
-
+    
     function compare(triggerArray, replyArray, string) {
       let item;
       for (let x = 0; x < triggerArray.length; x++) {
@@ -175,6 +184,7 @@
       else return containMessageCheck(string);
     }
 
+    //Keyboard matching basic greeting
     function containMessageCheck(string) {
       const expectedReply = [
         ["Good Bye, dude", "Bye, See you!", "Dude, Bye. Take care of your health in this situation."],
@@ -190,6 +200,7 @@
         ["morning", "good morning"],
         ["noon"]
       ];
+      // Through this loop system sends friendly response
       let item;
       for (let x = 0; x < expectedMessage.length; x++) {
         if (expectedMessage[x].includes(string)) {
@@ -200,6 +211,11 @@
       }
       return item;
     }
+
+// Appending Messages to the Chat Box
+// 1) Creates div for user and bot messages and adds them to the chat area.
+// 2) Scrolls to the bottom after new messages.
+// 3) Uses voiceControl() to speak the bot reply.
 
     function addChat(input, product) {
       const mainDiv = document.getElementById("message-section");
@@ -220,7 +236,7 @@
       voiceControl(product);
     }
 
-    // Voice Recognition Setup
+    // Voice Recognition Setup(Speech-to-text) user side
     window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
     const recognition = new SpeechRecognition();
