--- a/indx.html
+++ b/indx.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <title>Create Your Own Chatbot</title>
+    <!--Character encoding for webpage
+         UTF-8 supports almost all languages and symbol-->
     <meta charset="UTF-8" />
+    <!--Web page responsive is adjustable to all screen-->
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300">
